--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ a {
 }
 
 a:hover, a:focus, a:active {
-    color: #99f1f0;
+    color: #549DD6;
 }
 
 a:hover, a:active {
@@ -367,7 +367,7 @@ ul.disc li::before {
     width: 8px;
     height: 8px;
     border-radius: 50%;
-    background: #99f1f0;
+    background: #549DD6;
     position: absolute;
     left: -17px;
     top: 11px;
@@ -376,7 +376,7 @@ ul.disc li::before {
 
 dt {
     margin: 0;
-    color: #99f1f0;
+    color: #549DD6;
 }
 
 dd {
@@ -502,7 +502,7 @@ form,
 }
 
 .pace .pace-progress {
-    background: #99f1f0;
+    background: #549DD6;
     position: fixed;
     z-index: 900;
     top: 0;
@@ -545,7 +545,7 @@ form,
 }
 
 .line-scale-pulse-out > div {
-    background-color: #99f1f0;
+    background-color: #549DD6;
     width: 4px;
     height: 35px;
     border-radius: 2px;
@@ -772,7 +772,7 @@ textarea:-webkit-autofill:hover textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
-    -webkit-text-fill-color: #99f1f0;
+    -webkit-text-fill-color: #549DD6;
     transition: background-color 5000s ease-in-out 0s;
 }
 
@@ -832,8 +832,8 @@ button.btn--primary,
 input[type="submit"].btn--primary,
 input[type="reset"].btn--primary,
 input[type="button"].btn--primary {
-    background: #99f1f0;
-    border-color: #99f1f0;
+    background: #549DD6;
+    border-color: #549DD6;
     color: #FFFFFF;
 }
 
@@ -872,8 +872,8 @@ input[type="button"].btn--primary:focus {
 
 .btn--stroke, button.btn--stroke {
     background: transparent !important;
-    border: 0.2rem solid #99f1f0;
-    color: #99f1f0;
+    border: 0.2rem solid #549DD6;
+    color: #549DD6;
 }
 
 .btn--stroke:hover, button.btn--stroke:hover {
@@ -1101,7 +1101,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .stats-tabs li a:hover {
-    color: #99f1f0;
+    color: #549DD6;
 }
 
 .stats-tabs li a em {
@@ -1246,7 +1246,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     line-height: 1.333;
     text-transform: uppercase;
     letter-spacing: .25rem;
-    color: #99f1f0;
+    color: #549DD6;
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -1420,7 +1420,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 
 .slick-slider .slick-dots li.slick-active button,
 .slick-slider .slick-dots li:hover button {
-    background: #99f1f0;
+    background: #549DD6;
 }
 
 
@@ -1513,7 +1513,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     letter-spacing: .25rem;
     margin-bottom: 4.8rem;
     margin-top: .9rem;
-    color: #99f1f0;
+    color: #549DD6;
 }
 
 .header-nav p {
@@ -1651,7 +1651,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     font-size: 1.3rem;
     text-transform: uppercase;
     letter-spacing: .3rem;
-    color: #99f1f0;
+    color: #549DD6;
     -webkit-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
 }
@@ -1859,8 +1859,8 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .home-content__scroll a::before {
-    border-bottom: 2px solid #99f1f0;
-    border-right: 2px solid #99f1f0;
+    border-bottom: 2px solid #549DD6;
+    border-right: 2px solid #549DD6;
     content: '';
     display: block;
     height: 8px;
@@ -1884,7 +1884,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     display: block;
     width: 2px;
     height: 10.2rem;
-    background-color: #99f1f0;
+    background-color: #549DD6;
     position: absolute;
     right: 7.2rem;
     bottom: 0;
@@ -1944,7 +1944,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .home-social span {
-    color: #99f1f0;
+    color: #549DD6;
     right: 4.5rem;
     font-size: 1.3rem;
     opacity: 0;
@@ -2200,7 +2200,7 @@ html.no-csstransitions .home-content__main {
 .s-about {
     padding-top: 16.2rem;
     padding-bottom: 9rem;
-    background-color: #99f1f0;
+    background-color: #549DD6;
     color: #010507;
     position: relative;
 }
@@ -2405,7 +2405,7 @@ html.no-csstransitions .home-content__main {
 
 .services-list .service-icon {
     float: left;
-    color: #99f1f0;
+    color: #549DD6;
     font-size: 4.8rem;
     margin-top: -.6rem;
 }
@@ -2974,7 +2974,7 @@ html.no-csstransitions .home-content__main {
     padding: 0 2rem;
     margin: 0;
     color: #FFFFFF;
-    background: #99f1f0;
+    background: #549DD6;
 }
 
 .s-contact .form-field label::after {
@@ -2985,14 +2985,14 @@ html.no-csstransitions .home-content__main {
     margin-top: -6px;
     border-top: 5px solid transparent;
     border-bottom: 5px solid transparent;
-    border-right: 5px solid #99f1f0;
+    border-right: 5px solid #549DD6;
 }
 
 .contact__line {
     display: block;
     width: 2px;
     height: 20.4rem;
-    background-color: #99f1f0;
+    background-color: #549DD6;
     position: absolute;
     left: 50%;
     top: -10.2rem;
@@ -3019,7 +3019,7 @@ html.no-csstransitions .home-content__main {
 
 .contact-content h5 {
     margin-top: 0;
-    color: #99f1f0;
+    color: #549DD6;
 }
 
 .contact-content input[type="email"],
@@ -3046,7 +3046,7 @@ html.no-csstransitions .home-content__main {
 .contact-content textarea:focus,
 .contact-content select:focus {
     color: #FFFFFF;
-    border-bottom: 1px solid #99f1f0;
+    border-bottom: 1px solid #549DD6;
 }
 
 .contact-content button,
@@ -3137,7 +3137,7 @@ html.no-csstransitions .home-content__main {
 
 .contact-social li a:hover,
 .contact-social li a:focus {
-    color: #99f1f0;
+    color: #549DD6;
 }
 
 .contact-social li:last-child {
@@ -3160,7 +3160,7 @@ html.no-csstransitions .home-content__main {
 }
 
 .message-success {
-    color: #99f1f0;
+    color: #549DD6;
 }
 
 .message-warning i, .message-success i {
@@ -3352,7 +3352,7 @@ footer a {
 }
 
 footer a:hover, footer a:focus, footer a:active {
-    color: #99f1f0;
+    color: #549DD6;
 }
 
 footer .row {
@@ -3444,8 +3444,8 @@ footer .row {
     top: 0;
     right: 0;
     color: #FFFFFF;
-    background: #99f1f0;
-    border-color: #99f1f0;
+    background: #549DD6;
+    border-color: #549DD6;
     padding: 0 20px;
 }
 
